force-app/main/default/objects/Help_Desk__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>Reporting/Dashboards</fullName>
            </value>
            <value>
                <fullName>New Feature/Functionality Request</fullName>
            </value>
            <value>
                <fullName>Bug/Error Report</fullName>
            </value>
            <value>
                <fullName>New Software Request</fullName>
            </value>
            <value>
                <fullName>SmartHOPs</fullName>
            </value>
            <value>
                <fullName>DNO/ICP Installation</fullName>
                <isActive>false</isActive>
                <label>DNO/ICP Installation</label>
            </value>
            <value>
                <fullName>Existing Bug Fix</fullName>
                <isActive>false</isActive>
                <label>Existing Bug Fix</label>
            </value>
            <value>
                <fullName>Idea</fullName>
                <isActive>false</isActive>
                <label>Idea</label>
            </value>
            <value>
                <fullName>New functionality</fullName>
                <isActive>false</isActive>
                <label>New functionality</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Small Change</fullName>
                <isActive>false</isActive>
                <label>Small Change</label>
            </value>
            <value>
                <fullName>Training</fullName>
                <isActive>false</isActive>
                <label>Training</label>
            </value>
            <value>
                <fullName>Training Request</fullName>
                <isActive>false</isActive>
                <label>Training Request</label>
            </value>
            <value>
                <fullName>Uploads</fullName>
                <isActive>false</isActive>
                <label>Uploads</label>
            </value>
            <value>
                <fullName>User Support</fullName>
                <isActive>false</isActive>
                <label>User Support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>