force-app/main/default/objects/Help_Desk__c/fields/Upload_Count__c.field-meta.xml
<CustomField>
    <fullName>Upload_Count__c</fullName>
    <label>Upload Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>