force-app/main/default/objects/Help_Desk__c/validationRules/Cannot_Change_Ticket_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Ticket_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Status__c ) &amp;&amp;  $Setup.Automation_Settings__c.SB2_Workflow_Enabled__c = TRUE &amp;&amp;
 $User.PSO_Member__c = FALSE</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status of created Help Desk Tickets can only be changed by CloudJungle and members of the WHP Stormbird Working Group.</errorMessage>
</ValidationRule>