force-app/main/default/objects/Help_Desk__c/validationRules/CannotChangeOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeOwner</fullName>
    <active>true</active>
    <errorConditionFormula>$User.PSO_Member__c  &lt;&gt; TRUE &amp;&amp; ISCHANGED(OwnerId)</errorConditionFormula>
    <errorMessage>Only the current record owner or PSO can change the record owner. If you have permission please ensure you have provided justification for changing the owner.</errorMessage>
</ValidationRule>