force-app/main/default/objects/Help_Desk__c/validationRules/Owner_Change_Justification.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Change_Justification</fullName>
    <active>true</active>
    <errorConditionFormula>$User.PSO_Member__c  &lt;&gt; TRUE &amp;&amp; (OwnerId) &lt;&gt; $User.Id &amp;&amp;  ISCHANGED(Owner_Change_Justification__c)</errorConditionFormula>
    <errorMessage>Only the record owner can update this field.</errorMessage>
</ValidationRule>