force-app/main/default/objects/Help_Desk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Name_Of_Owner__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Forecast_Completion_Date__c</columns>
    <columns>Escalate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>