force-app/main/default/objects/Help_Desk__c/listViews/All_By_user.listView-meta.xml
<ListView>
    <fullName>All_By_user</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Completed_Date__c</columns>
    <columns>Name_Of_Owner__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name_Of_Owner__c</field>
        <operation>contains</operation>
        <value>parker</value>
    </filters>
    <label>All - By user</label>
</ListView>