force-app/main/default/objects/Help_Desk__c/listViews/Commercial_Test.listView-meta.xml
<ListView>
    <fullName>Commercial_Test</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject__c</field>
        <operation>startsWith</operation>
        <value>ComTest -</value>
    </filters>
    <label>Commercial Testing Feedback</label>
</ListView>