force-app/main/default/objects/Help_Desk__c/listViews/Commercial_Training_Tickets.listView-meta.xml
<ListView>
    <fullName>Commercial_Training_Tickets</fullName>
    <columns>Training_Required__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Name_Of_Owner__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>All_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected,Tasked to CloudJungle,Cancelled,In Testing,Awaiting Deployment,Complete</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>SmartHOPs</value>
    </filters>
    <filters>
        <field>Training_Required__c</field>
        <operation>equals</operation>
        <value>Training for Commercials</value>
    </filters>
    <label>Commercial Training Tickets</label>
</ListView>