force-app/main/default/objects/Help_Desk__c/listViews/Completed_Last_Week.listView-meta.xml
<ListView>
    <fullName>Completed_Last_Week</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed_Date__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Completed Last Week</label>
</ListView>