force-app/main/default/objects/Help_Desk__c/listViews/Completed_This_Month.listView-meta.xml
<ListView>
    <fullName>Completed_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assigned_To__c</columns>
    <columns>Forecast_Completion_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Priority__c</columns>
    <columns>Number_of_Installations_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>Completed_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Completed This Month</label>
</ListView>