force-app/main/default/objects/Help_Desk__c/listViews/Completed_This_Week.listView-meta.xml
<ListView>
    <fullName>Completed_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Escalate__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assigned_To__c</columns>
    <columns>Forecast_Completion_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Priority__c</columns>
    <columns>Number_of_Installations_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Completed This Week</label>
</ListView>