force-app/main/default/objects/Help_Desk__c/listViews/Copy_of_RB_Tickets_to_clear.listView-meta.xml
<ListView>
    <fullName>Copy_of_RB_Tickets_to_clear</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Number_of_Installations_Requested__c</columns>
    <columns>Escalate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Last_Checked__c</columns>
    <columns>Forecast_Completion_Date__c</columns>
    <columns>Additional_Note__c</columns>
    <columns>All_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected,Cancelled,Complete</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>richard burrell</value>
    </filters>
    <label>RB Tickets to Clear By Type</label>
</ListView>