force-app/main/default/objects/Help_Desk__c/listViews/Copy_of_Uploads_Awaiting_Response.listView-meta.xml
<ListView>
    <fullName>Copy_of_Uploads_Awaiting_Response</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Name_Of_Owner__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Escalate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Blocked,On Hold,Complete</value>
    </filters>
    <filters>
        <field>Escalate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Uploads</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Response</value>
    </filters>
    <label>Copy of Uploads  - Awaiting Response</label>
</ListView>