force-app/main/default/objects/Help_Desk__c/listViews/CT_Filters.listView-meta.xml
<ListView>
    <fullName>CT_Filters</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Chris tracey</value>
    </filters>
    <label>CT Filters</label>
</ListView>