force-app/main/default/objects/Help_Desk__c/listViews/Escalated_tickets_Not_Complete.listView-meta.xml
<ListView>
    <fullName>Escalated_tickets_Not_Complete</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Salesforce_Support_Required__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assigned_To__c</columns>
    <columns>Date_Requested_Further_Information__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Escalated_By__c</columns>
    <columns>Days_Since_Escalation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected,On Hold,Cancelled,Complete</value>
    </filters>
    <filters>
        <field>Escalate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Tasked to CloudJungle</value>
    </filters>
    <label>Escalated tickets - Not Complete</label>
</ListView>